skeplib/tests/fixtures/sema_project/invalid/exported_import_inferred_global/main.sk
from dep import seed;
let answer = seed + 1;
export { answer };
fn main() -> Int { return 0; }
